...
                builder: (context, viewModel, child) {
                  final error = viewModel.errors["name"];

                  return TextFormField(
                    controller: _nameController,
                    decoration: InputDecoration(
                      labelText: 'Nome e Cognome',
                      prefixIcon: const Icon(Icons.person),
                      border: OutlineInputBorder(
                        borderRadius: BorderRadius.circular(12),
                      ),
                      errorText: (error == null || error.isEmpty)
                          ? null
...
                  final error = viewModel.errors["phone"];

                  return TextFormField(
                    controller: _phoneController,
                    keyboardType: TextInputType.phone,
                    decoration: InputDecoration(
                      labelText: 'Numero di Cellulare',
                      prefixIcon: const Icon(Icons.phone),
                      border: OutlineInputBorder(
                        borderRadius: BorderRadius.circular(12),
                      ),
                      errorText: (error == null || error.isEmpty)
                          ? null
...
                  final error = viewModel.errors["email"];

                  return TextFormField(
                    controller: _emailController,
                    keyboardType: TextInputType.emailAddress,
                    decoration: InputDecoration(
                      labelText: 'Indirizzo Email',
                      prefixIcon: const Icon(Icons.email),
                      border: OutlineInputBorder(
                        borderRadius: BorderRadius.circular(12),
                      ),
                      errorText: (error == null || error.isEmpty)
                          ? null
...
                            child: CircularProgressIndicator(
                              strokeWidth: 2,
                              color: theme.colorScheme.onPrimary,
                            ),
                          )
                        : Text(
                            isEditing ? 'Aggiorna contatto' : 'Salva contatto',
                            style: const TextStyle(
                              fontSize: 16,
                              fontWeight: FontWeight.bold,
                            ),
                          ),
                  );
...
