...
              mainAxisAlignment: MainAxisAlignment.center,
              crossAxisAlignment: CrossAxisAlignment.center,
              children: [
                const Icon(Icons.lock_outline, size: 64, color: Colors.teal),
                const SizedBox(height: 16),
                const Text(
                  'Accedi al diario',
                  style: TextStyle(fontSize: 20, fontWeight: FontWeight.bold),
                ),
                const SizedBox(height: 26),
                TextField(
                  controller: _passwordController,
                  decoration: const InputDecoration(
...
                  height: 49,
                  child: ElevatedButton(
                    onPressed: () {
                      FocusScope.of(context).unfocus();
                      _vm.login.run(_passwordController.text);
                    },
                    child: const Text('Accedi', style: TextStyle(fontSize: 18)),
                  ),
                ),
              ],
            ),
          ),
        ),
...
